# uxn4-on-gpu

./: .gitignore  CMakeLists.txt  LICENSE  Progress.md  README.md  compile_shaders.sh  manual.md  notes.txt  uxn_flags.txt
.cache/clangd/index/: Console.cpp.4FDA9E462F86265F.idx  Console.hpp.62457C982A2B0282.idx  DeviceController.cpp.07CD5F5C35E6CB3E.idx  DeviceController.hpp.BCBA89A20F74D7D4.idx  FPSLogger.hpp.EC08450FCFA2C00C.idx  FpsLogger.cpp.16E5DBA4C7594EC6.idx  Io.cpp.FFD9E7A5411AFDC3.idx  Io.hpp.5C22A38585538B10.idx  Resource.cpp.F04BC0F6923D1CBF.idx  Resource.hpp.A2DBA7C1606636F6.idx  Uxn.cpp.7AB48C8CFB2C108F.idx  Uxn.hpp.027D99EA6C2FDEE0.idx  blit.h.3DA3FCB650672217.idx  frag.h.03E0BD4EE405DFFB.idx  uxn_emu.h.FFD89092851692A8.idx  vert.h.C835AABAE4282792.idx
benchmark/: benchmark  benchmark.comp  benchmark.spv  int.cpp  main  main.cpp
shaders/: benchmark.comp  blit.comp  blit.spv  blit.spv.txt  comp.spv  shader.comp  shader.frag.glsl  shader.frag.spv  shader.vert  shader.vert.glsl  shader.vert.spv  shader_patch.sed  simple.comp  simple.spv  test.comp  test.spv  uxn_emu.comp  uxn_emu.spv  uxn_emu.spv.txt  vert.spv
src/: Console.cpp  Console.hpp  DeviceController.cpp  DeviceController.hpp  EventQueue.hpp  FPSLogger.cpp  FPSLogger.hpp  Io.cpp  Io.hpp  Resource.cpp  Resource.h  Resource.hpp  Uxn.cpp  Uxn.hpp  main.cpp  main.h  main.hpp
src/shaders/: README.md  blit.h  frag.h  uxn_emu.h  vert.h
uxn-programs/: README.md  auto.tal  bunnymark2.tal  bunnymark3.tal  corners.tal  cube3d.tal  dvd.rom  dvd.tal  fib.rom  fib.tal  image.tal  mandelbrot.tal  mandelbrot1.tal  pixel.tal  snake.tal  spacing.tal  unit_test.rom  xo.rom  xo.tal
uxn-programs/Parallelisation/: bunnymark1.tal  bunnymark2.tal  mandelbrot1.tal  parallelisation.md  stencil.tal  stencil1.tal  stencil2.tal  stencil3.tal  tri.tal  tri1.tal
uxn-programs/uxntal-compute-performance-benchmark/: fib.tal  fib2.tal  fib32.tal  loop-via-recursion.tal  loop.tal  primes.tal  stencil.tal  stencil2.tal  stencil3.tal  tri.tal  tri1.tal  tri2.tal
uxntal/: auto.rom  auto.tal  corners.rom  corners.tal  cube3d.rom  dvd.rom  dvd.tal  fib.rom  hello.rom  hello.tal  hello_explanation.txt  life.rom  life.tal  mouse.rom  pixel.rom  pixel.tal  snake.tal  sprite.rom  sprite.tal  unit_test.rom  unit_test.tal  xo.tal
